// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`build simple: rollup cjs 1`] = `
"'use strict';

Object.defineProperty(exports, '__esModule', { value: true });

var fs = require('node:fs');

function _interopDefault (e) { return e && e.__esModule ? e : { default: e }; }

var fs__default = /*#__PURE__*/_interopDefault(fs);

var data = {
  name: "alice"
};
var data$1 = {
  data: data
};

function isFileSync(filepath) {
    if (!fs__default.default.existsSync(filepath))
        return false;
    return fs__default.default.statSync(filepath).isFile();
}

console.log('data:', data$1);
console.log(isFileSync(__filename));
var index = (function () { return data$1; });

exports.default = index;
exports.isFileSync = isFileSync;
//# sourceMappingURL=index.js.map
"
`;

exports[`build simple: rollup cjs 2`] = `
{
  "fileName": "index.js.map",
  "name": undefined,
  "names": [],
  "needsCodeReference": false,
  "originalFileName": null,
  "originalFileNames": [],
  "source": "{"version":3,"file":"index.js","sources":["../../src/util.ts","../../src/index.ts"],"sourcesContent":[null,null],"names":["fs","data"],"mappings":";;;;;;;;;;;;;;;;;AAQM,SAAU,UAAU,CAAE,QAAgB,EAAA;AAC1C,IAAA,IAAI,CAACA,mBAAE,CAAC,UAAU,CAAC,QAAQ,CAAC;AAAE,QAAA,OAAO,KAAK;IAC1C,OAAOA,mBAAE,CAAC,QAAQ,CAAC,QAAQ,CAAC,CAAC,MAAM,EAAE;AACvC;;ACNA,OAAO,CAAC,GAAG,CAAC,OAAO,EAAEC,MAAI,CAAC;AAC1B,OAAO,CAAC,GAAG,CAAC,UAAU,CAAC,UAAU,CAAC,CAAC;AAEnC,YAAA,CAAe,YAAM,EAAA,OAAAA,MAAI,CAAA,EAAA;;;;;"}",
  "type": "asset",
}
`;

exports[`build simple: rollup esm 1`] = `
"import fs from 'node:fs';

var data = {
  name: "alice"
};
var data$1 = {
  data: data
};

function isFileSync(filepath) {
    if (!fs.existsSync(filepath))
        return false;
    return fs.statSync(filepath).isFile();
}

console.log('data:', data$1);
console.log(isFileSync(__filename));
var index = (function () { return data$1; });

export { index as default, isFileSync };
//# sourceMappingURL=index.js.map
"
`;

exports[`build simple: rollup esm 2`] = `
{
  "fileName": "index.js.map",
  "name": undefined,
  "names": [],
  "needsCodeReference": false,
  "originalFileName": null,
  "originalFileNames": [],
  "source": "{"version":3,"file":"index.js","sources":["../../src/util.ts","../../src/index.ts"],"sourcesContent":[null,null],"names":["data"],"mappings":";;;;;;;;;AAQM,SAAU,UAAU,CAAE,QAAgB,EAAA;AAC1C,IAAA,IAAI,CAAC,EAAE,CAAC,UAAU,CAAC,QAAQ,CAAC;AAAE,QAAA,OAAO,KAAK;IAC1C,OAAO,EAAE,CAAC,QAAQ,CAAC,QAAQ,CAAC,CAAC,MAAM,EAAE;AACvC;;ACNA,OAAO,CAAC,GAAG,CAAC,OAAO,EAAEA,MAAI,CAAC;AAC1B,OAAO,CAAC,GAAG,CAAC,UAAU,CAAC,UAAU,CAAC,CAAC;AAEnC,YAAA,CAAe,YAAM,EAAA,OAAAA,MAAI,CAAA,EAAA;;;;"}",
  "type": "asset",
}
`;

exports[`build simple: rollup esm 3`] = `
"/**
 * Check if the given filepath is an existed path of file.
 *
 * @param filepath
 * @returns
 */
declare function isFileSync(filepath: string): boolean;

declare const _default: () => {
    data: {
        name: string;
    };
};

export { _default as default, isFileSync };
"
`;
